feat: add adaptive layout

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,6 +1,6 @@
 .card-wrapper {
     padding: 0px 24px;
-    width: 1232px;
+    width: px;
     height: 216px;
     grid-row-start: 3;
     grid-row-end: 4;
