--- a/src/components/container/Container.css
+++ b/src/components/container/Container.css
@@ -1,9 +1,12 @@
 .container {
     max-width: 1232px;
+    height: 1024px;
+    gap: 24px;
     box-sizing: border-box;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 168px 24px 216px 24px 126px 16px 101px 24px 283px;
-    column-gap: 24px;
     padding: 0px 0px 42px 0px;
 }
+
+
