--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -7,11 +7,11 @@
     display: flex;
 }
 
-.card-action-wrapper{
+.card-action-wrapper-footer{
     align-self: flex-end;
 }
 
-.card-action-action {
+.card-action-action-footer {
     padding: 12px 0px;
     width: 240px;
     height: 56px;
@@ -19,16 +19,17 @@
     background: var(--character-light-primary-inverse);
 }
 
-.card-action-body {
+.card-action-body-footer {
     padding: 12px 24px;
     width: 240px;
     height: 71px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    background: var(--character-light-primary-inverse);
 }
 
-.text-top-outher {
+.text-top-outher-footer {
     width: 192px;
     height: 21px;
     font-family: var(--font-family);
@@ -38,7 +39,7 @@
     color: var(--primary-light-6);
 }
 
-.text-bottom-outher {
+.text-bottom-outher-footer {
     width: 192px;
     height: 18px;
     font-family: var(--font-family);
@@ -48,7 +49,7 @@
     color: var(--character-light-secondary-45);
 }
 
-.button-left, .button-rigth {
+.button-left-footer, .button-rigth-footer {
     border-radius: 2px;
     padding: 4px 15px;
     width: 120px;
@@ -136,6 +137,8 @@
     text-align: center;
     color: var(--character-light-title-85);
 }
+
+
 
 
 
