--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,14 +1,8 @@
 .header {
-    width: 100%;
-    height: 100%;
     background: var(--primary-light-1);
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 2;
     padding: 16px 24px;
-    width: 1232px;
-    height: 168px;
+    max-width: 1232px;
+    max-height: 168px;
     display: flex;
     flex-direction: column;
     justify-content: center;
